Revision history for Test-BrewBuild

1.02    2016-03-24
        - default plugin now uses cpanm for all installs, rendering the build
          system in use irrelevant (should work for distzilla) (closes #29)
        - modified logging levels
        - added new --args arg to 'brewbuild', this is an aref that gets
          dereferenced and the list passed into the 'brewbuild_exec()'sub
          in each plugin

1.01    2016-03-22
        - set README to the binary, not the module... d'oh!

1.00    2016-03-22
        - removed Plugin.pm, we now use Plugin::Simple for the plugin init work
        - BUILD_REQUIRES Mock::Sub v1.06 for testing purposes, so we can test
          without *brew installed (and if it is, we don't want to be managing
          instances)
        - finally got around to implementing a near full test suite (closes #4)
        - removed version() from BrewCommands.pm, not needed
        - bumped major version number now that we're tested and stable

0.06    2016-03-21
        - added '--on' param, send in a list of perl versions to run against,
          instead of the default all (closes #17)
        - renamed 'count' param to 'new', kept change for backwards
          compatibility reasons (closes #23)
        - we can now load non-installed local plugins by specifying the full or
          relative path name plus name of file to the --plugin param (closes
          #24)
        - all *brew command creation moved to Test::BrewBuild::BrewCommands.pm
          (closes #19)
        - new round of unit tests
        - added debug logging to Test::BrewBuild::BrewCommands
        - added warning in Makefile.PL and skip a bunch of tests if *brew isn't 
          installed
        - 'brewbuild' command warns with a link to the respective *brew, and
          exits if it isn't installed

0.05    2016-03-18
        - we now recognize when Module::Build is being used, as opposed
          to EUMM, and it works properly (fixes #12)