@@ -19,7 +19,6 @@ t/07-BrewCommands.t
 t/08-instance_remove.t
 t/09-instance_install.t
 t/10-run.t
-t/11-results.t
 t/12-TestPluginInst.t
 t/13-exec.t
 t/base/UnitTestPlugin.pm
