@@ -21,7 +21,7 @@ WriteMakefile(
     NAME             => 'Test::BrewBuild',
     AUTHOR           => q{Steve Bertrand <steveb@cpan.org>},
     VERSION_FROM     => 'lib/Test/BrewBuild.pm',
-    ABSTRACT_FROM    => 'bin/brewbuild',
+    ABSTRACT_FROM    => 'lib/Test/BrewBuild.pm',
     LICENSE          => 'perl_5',
     PL_FILES         => {},
     EXE_FILES        => [ map "bin/$_", qw(brewbuild) ],
